--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,9 @@
 	float: left;
 	margin-top: 1%;
 	margin-left:1%;
-	box-shadow: 5px 5px 5px
+	box-shadow: 5px 5px 5px;
 }
+
 
 #staff_info_container
 {
@@ -65,7 +66,7 @@
 	margin-left: -17%;
 }
 
-#searchForm
+#searchResult
 {
-	margin-left: 8%;
+	margin-left: 2%;
 }
